--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "description": "Проект «Большое путешествие» от HTML Academy",
   "scripts": {
-    "lint": "eslint src/"
+    "lint": "eslint src/",
+    "build": "webpack --mode production",
+    "start": "webpack serve --mode development --open"
   },
   "devDependencies": {
     "eslint": "8.38.0",
@@ -12,5 +14,15 @@
   },
   "engines": {
     "node": "18"
+  },
+  "dependencies": {
+    "@babel/core": "7.21.4",
+    "@babel/preset-env": "7.21.4",
+    "babel-loader": "9.1.2",
+    "copy-webpack-plugin": "11.0.0",
+    "html-webpack-plugin": "5.5.1",
+    "webpack": "5.79.0",
+    "webpack-cli": "5.0.1",
+    "webpack-dev-server": "4.13.3"
   }
 }
