--- a/package.json
+++ b/package.json
@@ -17,12 +17,7 @@
   },
   "devDependencies": {
     "eslint": "8.38.0",
-    "eslint-config-htmlacademy": "9.0.0"
-  },
-  "engines": {
-    "node": "18"
-  },
-  "dependencies": {
+    "eslint-config-htmlacademy": "9.0.0",
     "@babel/core": "7.21.4",
     "@babel/preset-env": "7.21.4",
     "babel-loader": "9.1.2",
@@ -31,5 +26,11 @@
     "webpack": "5.79.0",
     "webpack-cli": "5.0.1",
     "webpack-dev-server": "4.13.3"
+  },
+  "engines": {
+    "node": "18"
+  },
+  "dependencies": {
+    "dayjs": "1.11.7"
   }
 }
